Closed Bug 258819 Opened 21 years ago Closed 21 years ago

[FIX]Setting window.status should not flush

Categories

(Core :: DOM: Core & HTML, defect, P1)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha4

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

(Keywords: perf)

Attachments

(1 file)

Given the patch to bug 129844, there is absolutely no reason to flush on setting window.status (since the paint will be async anyway). So the patch to bug 97227 should simply be backed out, in my opinion. Failing that, we can add a new constant to nsIWebBrowserChrome's SetStatus() constants to trigger sync updates and flush only if it's set... Thoughts, jst?
Target Milestone: --- → mozilla1.8alpha4
Attached patch Like soSplinter Review
Priority: -- → P1
Summary: Setting window.status should not flush → [FIX]Setting window.status should not flush
Comment on attachment 158517 [details] [diff] [review] Like so See comment 0 for the other option that I think may be OK.
Attachment #158517 - Flags: superreview?(jst)
Attachment #158517 - Flags: review?(jst)
Comment on attachment 158517 [details] [diff] [review] Like so r+sr=jst
Attachment #158517 - Flags: superreview?(jst)
Attachment #158517 - Flags: superreview+
Attachment #158517 - Flags: review?(jst)
Attachment #158517 - Flags: review+
Checked in to trunk.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: