Setting window.status should not flush.  Bug 258819, r+sr=jst